# goit-python-web-hw7

./: README.md  alembic.ini  connect_db.py  main.py  models.py  my_select.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 2d42d31e99f6_init.py  89cb4f2926b5_init.py
