[tool.poetry]
name = "goit-python-web-hw7"
version = "0.1.0"
description = ""
authors = ["Aleksander K <alex.nuclearboy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
