[tool.poetry]
name = "goit-python-web-hw7"
version = "0.1.0"
description = "Educational project on working with a database"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^24.1.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
