[tool.poetry]
name = "goit-python-web-hw7"
version = "1.0.0"
description = "This project implements a simplified database schema designed for educational management purposes. It models the relationships between groups, students, teachers, disciplines (courses), and grades to practice database design, automated data generation, and query execution for various data retrieval tasks."
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^24.1.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
